--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,37 +1,40 @@
-<!-- file: src/app/app.html -->
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="page">
+  <div class="table-container mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
+      <!-- Position -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef sticky> No.</th>
+        <td mat-cell *matCellDef="let element"> {{ element.position }}</td>
+      </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
+      <!-- Name -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef sticky> Name</th>
+        <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
+      </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-  </ng-container>
+      <!-- Weight -->
+      <ng-container matColumnDef="weight">
+        <th mat-header-cell *matHeaderCellDef sticky> Weight</th>
+        <td mat-cell *matCellDef="let element"> {{ element.weight }}</td>
+      </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container>
+      <!-- Symbol -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef sticky> Symbol</th>
+        <td mat-cell *matCellDef="let element"> {{ element.symbol }}</td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
 
-<mat-paginator
-  [length]="dataSource.data.length"
-  [pageSize]="10"
-  [pageSizeOptions]="[5, 10, 25, 50]"
-  showFirstLastButtons>
-</mat-paginator>
+  <mat-paginator
+    [length]="dataSource.data.length"
+    [pageSize]="50"
+    [hidePageSize]="true"
+    showFirstLastButtons>
+  </mat-paginator>
+</div>
