--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,29 +1,29 @@
+<!-- file: src/app/app.html -->
 <div class="page">
   <div class="table-container mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
-
       <!-- Position -->
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef sticky> No.</th>
-        <td mat-cell *matCellDef="let element"> {{ element.position }}</td>
+        <th mat-header-cell *matHeaderCellDef sticky>No.</th>
+        <td mat-cell *matCellDef="let e">{{ e.position }}</td>
       </ng-container>
 
       <!-- Name -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef sticky> Name</th>
-        <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
+        <th mat-header-cell *matHeaderCellDef sticky>Name</th>
+        <td mat-cell *matCellDef="let e">{{ e.name }}</td>
       </ng-container>
 
       <!-- Weight -->
       <ng-container matColumnDef="weight">
-        <th mat-header-cell *matHeaderCellDef sticky> Weight</th>
-        <td mat-cell *matCellDef="let element"> {{ element.weight }}</td>
+        <th mat-header-cell *matHeaderCellDef sticky>Weight</th>
+        <td mat-cell *matCellDef="let e">{{ e.weight }}</td>
       </ng-container>
 
       <!-- Symbol -->
       <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef sticky> Symbol</th>
-        <td mat-cell *matCellDef="let element"> {{ element.symbol }}</td>
+        <th mat-header-cell *matHeaderCellDef sticky>Symbol</th>
+        <td mat-cell *matCellDef="let e">{{ e.symbol }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
@@ -31,10 +31,11 @@
     </table>
   </div>
 
+  <!-- Footer: always at bottom of the viewport -->
   <mat-paginator
     [length]="dataSource.data.length"
     [pageSize]="50"
-    [hidePageSize]="true"
-    showFirstLastButtons>
+    showFirstLastButtons
+    class="footer-paginator">
   </mat-paginator>
 </div>
