--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,6 +35,7 @@
   <mat-paginator
     [length]="dataSource.data.length"
     [pageSize]="50"
+    [hidePageSize]="true"
     showFirstLastButtons
     class="footer-paginator">
   </mat-paginator>
