--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="layout">
-  <!-- LEFT: Tree (only leaves selectable) -->
+  <!-- LEFT: Tree (leaf-only selectable) -->
   <aside class="sidenav">
     <mat-tree #tree [dataSource]="treeData" [childrenAccessor]="childrenAccessor">
 
@@ -47,39 +47,41 @@
     </mat-tree>
   </aside>
 
-  <!-- RIGHT: Table + paginator -->
+  <!-- RIGHT: Dynamic grid + paginator -->
   <section class="content">
     <div class="table-container mat-elevation-z8">
       <table mat-table [dataSource]="dataSource">
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef sticky>No.</th>
-          <td mat-cell *matCellDef="let e">{{ e.position }}</td>
-        </ng-container>
+        <!-- Generate all columns dynamically -->
+        @for (col of columns; track col.key) {
+          <ng-container [matColumnDef]="col.key">
+            <th
+              mat-header-cell
+              *matHeaderCellDef
+              sticky
+              [style.width.px]="col.widthPx"
+              [style.text-align]="col.align ?? 'start'">
+              {{ col.label }}
+            </th>
 
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef sticky>Name</th>
-          <td mat-cell *matCellDef="let e">{{ e.name }}</td>
-        </ng-container>
+            <td
+              mat-cell
+              *matCellDef="let row"
+              [style.text-align]="col.align ?? 'start'">
+              {{ row[col.key] }}
+            </td>
+          </ng-container>
+        }
 
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef sticky>Weight</th>
-          <td mat-cell *matCellDef="let e">{{ e.weight }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef sticky>Symbol</th>
-          <td mat-cell *matCellDef="let e">{{ e.symbol }}</td>
-        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </div>
 
-    <!-- dataSource is non-null; data is always an array -->
     <mat-paginator
       [length]="dataSource.data.length"
       [pageSize]="pageSize"
+      [hidePageSize]="true"
       showFirstLastButtons
       class="footer-paginator">
     </mat-paginator>
