adjust loading indicator

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -49,7 +49,9 @@
 
   <!-- RIGHT: Dynamic grid + paginator -->
   <section class="content" style="position: relative;">
-    <app-loading-indicator></app-loading-indicator>
+    @if (loading()) {
+      <app-loading-indicator></app-loading-indicator>
+    }
     <div class="table-container mat-elevation-z8">
       <table mat-table [dataSource]="rows">
         @for (col of columns; track col.key) {
