--- a/src/app/app.html
+++ b/src/app/app.html
@@ -74,7 +74,7 @@
       [length]="total"
       [pageIndex]="pageIndex"
       [pageSize]="pageSize"
-      [pageSizeOptions]="[10, 25, 50, 100]"
+      [hidePageSize]="true"
       showFirstLastButtons
       class="footer-paginator"
       (page)="onPage($event)">
