--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,7 +28,7 @@
   background: transparent;
   width: 100%;
   text-align: left;
-  padding: 6px 16px;
+  padding: 8px 16px 8px 25px;
   border-left: 3px solid transparent;
   cursor: pointer;
   font: inherit;
