--- a/src/app/app.html
+++ b/src/app/app.html
@@ -47,6 +47,7 @@
 
     <div class="table-container">
       <table
+        class="striped"
         mat-table
         [dataSource]="rows"
         matSort
