--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,10 +1,16 @@
-:host { display: block; height: 100dvh; }
+:host {
+  display: block;
+  height: 100dvh;
+}
 
-.layout { display: flex; height: 100%; }
+.layout {
+  display: flex;
+  height: 100%;
+}
 
 .sidenav {
   width: 260px;
-  border-right: 1px solid rgba(0,0,0,.12);
+  border-right: 1px solid rgba(0, 0, 0, .12);
   overflow: auto;
   padding: 8px 0;
 }
@@ -70,7 +76,7 @@
   position: sticky;
   bottom: 0;
   background: var(--mat-surface, #fff);
-  border-top: 1px solid rgba(0,0,0,.12);
+  border-top: 1px solid rgba(0, 0, 0, .12);
   z-index: 2;
 }
 
@@ -101,5 +107,16 @@
 
 ::ng-deep .mat-sort-header-arrow svg {
   fill: white !important;
-
 }
+
+/* --- Striped (zebra) rows using MD3 tokens --- */
+
+
+table.striped tr.mat-mdc-row:nth-child(odd) {
+  background-color: color-mix(
+      in srgb,
+      var(--mat-sys-surface) 10%,
+      var(--mat-sys-outline) 5%
+  );
+}
+
