--- a/src/app/app.html
+++ b/src/app/app.html
@@ -69,8 +69,7 @@
               mat-header-cell
               *matHeaderCellDef
               sticky
-              mat-sort-header="{{ col }}"
-              [class.numeric]="isNumericColumn(col)">
+              mat-sort-header="{{ col }}">
               {{ col }}
             </th>
             <td
