--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,7 @@
     </div>
 
     <mat-paginator
-      [length]="total"
+      [length]="totalCount"
       [pageIndex]="pageIndex"
       [pageSize]="pageSize"
       [hidePageSize]="true"
