--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,8 +80,8 @@
             </td>
           </ng-container>
         }
-        <tr mat-header-row *matHeaderRowDef="displayedColumns(); sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns();"></tr>
+        <tr mat-header-row *matHeaderRowDef="columnNames(); sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnNames();"></tr>
       </table>
     </div>
 
